# satellite-ground-station

./: .gitignore  L0_system_context.md  PROJECT_OVERVIEW.md  README  README.md  config.json  generate_orbital_data.py  performance_requirements.md  satcom_server.py  satellite-viz.html
cpp/: CMakeLists.txt
cpp/src/: doppler_tracker.cpp  rtlsdr_capture.cpp  rtlsdr_test.cpp
data/: mission_log.json
data/decoded/: NOAA_18_20260227_032439_metadata.json
data/doppler/: NOAA_18_20260227_032439_doppler.json  NOAA_19_20260227_025446_doppler.json
docs/architecture/: L0_system_context.md  L1_subsystems.md  L1_subsystems_updated.md  L2_implementation.md  L2_implementation_updated.md  interface_control.md  verification_plan.md  verification_plan_updated.md
docs/ml/: ml_architecture.md
docs/project_management/: risk_register.md
docs/requirements/: functional_requirements.md  functional_requirements_updated.md  interface_requirements.md  performance_requirements.md
docs/verification/: verification_plan.md
hmi/: generate_orbital_data.py  satellite-viz.html
matlab/tests/: rtlsdr_spectrum_test.m
python/: data_store.py  doppler_calc.py  predict_passes.py  run_mission.py  schedule_captures.py
python/demod/: decode_apt.py  decode_apt_wav.py
python/ml/: feature_engineering.py  ml_predictor.py  model_trainer.py  pass_scorer.py  scheduler_optimizer.py
